--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "rehype plugin to highlight code blocks with shiki",
   "main": "index.js",
+  "files": [
+    "index.js"
+  ],
   "scripts": {
     "format": "prettier --write '**/*.js' && xo --fix",
     "test": "xo"
