--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "rehype plugin to highlight code blocks with shiki",
   "main": "index.js",
   "files": [
-    "index.js"
+    "dist"
   ],
   "scripts": {
     "format": "prettier --write '**/*.js' && xo --fix",
-    "test": "xo"
+    "test": "xo",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -30,8 +31,8 @@
   "homepage": "https://github.com/rsclarke/rehype-shiki#readme",
   "dependencies": {
     "hast-util-to-string": "^1.0.4",
-    "shiki": "^0.1.7",
-    "shiki-languages": "^0.1.6",
+    "shiki": "^0.9.2",
+    "shiki-languages": "^0.2.7",
     "unist-builder": "^2.0.3",
     "unist-util-visit": "^2.0.3"
   },
