--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "unist-util-visit": "^2.0.3"
   },
   "devDependencies": {
-    "prettier": "2.0.5",
+    "prettier": "^2.2.1",
     "typescript": "^4.1.5",
     "xo": "^0.32.1"
   },
